--- a/ProgettoRespa.net/ProgettoRespa.net/Form1.resx
+++ b/ProgettoRespa.net/ProgettoRespa.net/Form1.resx
@@ -121,9 +121,12 @@
     <value>17, 17</value>
   </metadata>
   <metadata name="startTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>136, 17</value>
+    <value>180, 19</value>
   </metadata>
   <metadata name="PortaTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>243, 17</value>
+    <value>340, 18</value>
+  </metadata>
+  <metadata name="resetTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>512, 17</value>
   </metadata>
 </root>
