--- a/ProgettoRespa.net/ProgettoRespa.net/Form1.resx
+++ b/ProgettoRespa.net/ProgettoRespa.net/Form1.resx
@@ -135,7 +135,10 @@
   <metadata name="TimerRobot.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>812, 17</value>
   </metadata>
+  <metadata name="timerSalita.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>928, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
+    <value>213</value>
   </metadata>
 </root>
