--- a/ProgettoRespa.net/ProgettoRespa.net/Properties/Resources.resx
+++ b/ProgettoRespa.net/ProgettoRespa.net/Properties/Resources.resx
@@ -118,16 +118,40 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="maglietta nera" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\maglietta nera.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="jeans chiaro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\jeans chiaro.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="braccio" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\braccio.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="robot" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\robot.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="braccio1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\braccio1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="scarpe nere" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scarpe nere.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="tubo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tubo.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scarpebianche1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scarpebianche1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pantalone nero" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pantalone nero.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="robot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\robot.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="giacca di pelle nera" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\giacca di pelle nera.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="maglietta bianca" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\maglietta bianca.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="felpaverde1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\felpaverde1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
